--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "nuxi preview",
-    "generate": "nuxi generate",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint:prettier": "prettier --check .",
@@ -19,7 +19,7 @@
     "base-64": "^1.0.0",
     "core-js": "^3.19.3",
     "nuxt-client-init-module": "^0.3.0",
-    "nuxt-edge": "latest",
+    "nuxt": "^2.15.8",
     "unescape-js": "^1.1.4",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
