added new modules for typescript and webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node"]
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/axios",
+      "@types/node",
+      "nuxt-webpack-optimisations"
+    ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
