--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "base-64": "^1.0.0",
     "core-js": "^3.19.3",
-    "nuxt-client-init-module": "^0.3.0",
     "nuxt": "^2.15.8",
+    "nuxt-client-init-module": "^0.3.0",
+    "nuxt-webpack-optimisations": "^2.2.0",
     "unescape-js": "^1.1.4",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -39,6 +41,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "nuxt-purgecss": "^1.0.0",
+    "nuxt-typed-router": "^0.3.0",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
