Revert "added new modules for typescript and webpack"
This reverts commit 667c440de047181913e5c7ce36cf12575260e168.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": [
-      "@nuxt/types",
-      "@nuxtjs/axios",
-      "@types/node",
-      "nuxt-webpack-optimisations"
-    ]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
