--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "ant-design-vue": "^1.7.8",
     "base-64": "^1.0.0",
     "core-js": "^3.19.3",
-    "nuxt-client-init-module": "^0.3.0",
     "nuxt": "^2.15.8",
+    "nuxt-client-init-module": "^0.3.0",
+    "nuxt-webpack-optimisations": "^2.2.0",
     "unescape-js": "^1.1.4",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
