--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "dependencies": {
+    "@luxdamore/nuxt-prune-html": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "base-64": "^1.0.0",
