--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@types/base-64": "^1.0.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
