added types for error and pagination

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node"]
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/axios",
+      "@types/node",
+      "@nuxtjs/color-mode"
+    ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
