fix: fixed modalTable

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-client-init-module": "^0.3.0",
+    "nuxt-precompress": "^0.5.9",
     "nuxt-webpack-optimisations": "^2.2.0",
     "unescape-js": "^1.1.4",
     "vue": "^2.6.14",
